--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,14 @@ h1 {
 }
 
 p {
-    color: white;
+    color: red;
     font-size: 26px;
     text-align: center;
+}
+
+.container {
+    background: whitesmoke;
+    padding: 15px;
+    margin-left: 150px;
+    border: 2px solid black;
 }
