--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,30 @@
 /* Chemistry Theme */
 
 body {
-    background-image: url("../images/chemistry-wallpaper.jpg")
+    background-image: url("../images/chemistry-background.jpg")
 }
 
 h1 {
-    color: red;
+    color: blue;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: 'Viga', sans-serif; */
     font-size: 40px;
     padding: 5px;
     /* background: whitesmoke; */
 }
 
-p {
-    color: red;
+p, h3 {
+    color: gray;
     font-size: 26px;
     text-align: center;
+    /* font-family: 'Viga', sans-serif; */
 }
 
 .container {
     background: whitesmoke;
     padding: 15px;
-    margin-left: 150px;
+    margin-left: 350px;
+    margin-right: 350px;
     border: 2px solid black;
+    font-family: 'Viga', sans-serif;
 }
